--- a/ProyectoSpotify/src/app/modules/tracks/pages/tracks-page/tracks-page.component.html
+++ b/ProyectoSpotify/src/app/modules/tracks/pages/tracks-page/tracks-page.component.html
@@ -1,1 +1,9 @@
-<p>tracks-page works!</p>
+<div class="tracks-page">
+
+    <app-section-generic [dataTracks]="mockTracksList" [mode]="'small'" [title]="'!La mejor música del mundo!'"></app-section-generic>
+    <div class="separador-tracks-page"></div>
+    <app-section-generic [dataTracks]="mockTracksList" [mode]="'big'" [title]="'!Lo mejor de Electronica!'"></app-section-generic>
+</div>
+
+
+
