--- a/ProyectoSpotify/src/app/shared/components/media-player/media-player.component.html
+++ b/ProyectoSpotify/src/app/shared/components/media-player/media-player.component.html
@@ -19,7 +19,7 @@
         <img class="cover" src="{{ mockCover.cover }}" alt="">
         <div class="track-info">
             <h3 class="track-title">{{ mockCover.name }}</h3>
-            <h5 class="track-title sub-title">{{ mockCover.albun}}</h5>
+            <h5 class="track-title sub-title">{{ mockCover.album}}</h5>
         </div>
         <div class="track-like">
             <button class="btn-like">
