--- a/ProyectoSpotify/src/app/shared/components/side-bar/side-bar.component.html
+++ b/ProyectoSpotify/src/app/shared/components/side-bar/side-bar.component.html
@@ -2,7 +2,7 @@
     <div><i class="uil uil-ellipsis-h"></i></div>
     <ul class="side-bar__list list-one">
         <li *ngFor="let item of mainMenu.defaultOptions">
-            <div class="list-wrapper-item">
+            <div [routerLink]="item.router" class="list-wrapper-item">
                 <i [ngClass]="[item.icon]"></i>
                 <span class="side-bar__list list-label">{{item.name}}</span>
             </div>
