--- a/ProyectoSpotify/src/app/shared/components/play-list-body/play-list-body.component.html
+++ b/ProyectoSpotify/src/app/shared/components/play-list-body/play-list-body.component.html
@@ -26,7 +26,7 @@
 <ng-template #coverSection let-track="track">
 
     <div class="cover-section">
-        <img appImgBroken appImgBroken class="cover-track" [src]="track.cover" [alt]="track.name">
+        <img class="cover-track" [src]="track.cover" [alt]="track.name">
         <div class="cover-info">
             <div class="name-track">{{track.name}}</div>
             <div class="name-track-details">{{track.artist.name}}</div>
