--- a/ProyectoSpotify/src/app/shared/components/side-bar/side-bar.component.html
+++ b/ProyectoSpotify/src/app/shared/components/side-bar/side-bar.component.html
@@ -1,5 +1,5 @@
 <div class="side-bar">
-    <div><i class="uil uil-ellipsis-h"></i></div>
+    <div [routerLink]="['/auth']" ><i class="uil uil-ellipsis-h">Regresar</i></div>
     <ul class="side-bar__list list-one">
         <li *ngFor="let item of mainMenu.defaultOptions">
             <div [routerLink]="item.router" class="list-wrapper-item">
