--- a/ProyectoSpotify/src/app/modules/auth/pages/auth-page/auth-page.component.html
+++ b/ProyectoSpotify/src/app/modules/auth/pages/auth-page/auth-page.component.html
@@ -7,11 +7,10 @@
             <button class="social-btn"><i class="uil uil-google"></i> Continuar con Google</button>
         </div>
         <div class="separator"></div>
-        <form  class="login-auth-form">
+        <form (ngSubmit)="sendLogin()" [formGroup]="formLogin" class="login-auth-form">
             <div class="form-group">
                 <label for="email">Dirección de correo o nombre de usuario</label>
-                <input formControlName="email" type="text" placeholder="Dirección de correo o nombre de usuario"
-                    class="form-input">
+                <input formControlName="email" type="text" placeholder="Dirección de correo o nombre de usuario" class="form-input">
             </div>
             <div class="form-group">
                 <label for="password">Contraseña</label>
@@ -24,7 +23,7 @@
                 Ocurrio un error con tu email o password
             </div>
             <div class="form-action">
-                <button (action)="" class="login social-btn">Iniciar sesión</button>
+                <button [disabled]="formLogin.invalid" class="login social-btn">Iniciar sesión</button>
             </div>
         </form>
     </div>
